Complete teacher score-report function.

--- a/src/main/resources/static/entrance/home/login.html
+++ b/src/main/resources/static/entrance/home/login.html
@@ -13,10 +13,10 @@
 <script src="../../global/plugins/angular-1.5.8/angular-animate.min.js"></script>
 <script src="../../global/script/constants.js"></script>
 <script src="login.js"></script>
-<title>SignIn | MSS</title>
+<title>用户登录 | MSS</title>
 <link href="../../global/plugins/bootstrap-3.3.7/css/bootstrap.min.css"
 	rel="stylesheet">
-<link href="../../vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+<link href="../../global/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 <link rel="stylesheet"
 	href="../../global/plugins/toastr/css/angular-toastr.css" />
 <link href="login.css" rel="stylesheet">
