--- a/src/main/resources/static/entrance/home/home.html
+++ b/src/main/resources/static/entrance/home/home.html
@@ -46,7 +46,8 @@
                     <ul class="nav child_menu">
                       <li ng-if="user.student" ui-sref-active="active"><a ui-sref=".score-view">查看</a></li>
                       <li ng-if="user.teacher" ui-sref-active="active"><a ui-sref=".score-view-teacher">管理</a></li>
-                      <li ui-sref-active="active"><a ui-sref=".score-report">报表</a></li>
+                      <li ng-if="user.teacher" ui-sref-active="active"><a ui-sref=".score-report">报表</a></li>
+                      <li ng-if="user.student" ui-sref-active="active"><a ui-sref=".score-report-student">报表</a></li>
                     </ul>
                   </li>
                   <li ng-show="user.teacher && user.admin"><a><i class="fa fa-users"></i>人员<span class="fa fa-chevron-down"></span></a>
